--- a/main.html
+++ b/main.html
@@ -3,6 +3,9 @@
 <html>
 
 <head>
+	 <div class="box-model">
+        This is a demo of box model, try to replicate this box model in html & css and pass all the test cases.
+    </div>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
