--- a/main.html
+++ b/main.html
@@ -3,14 +3,14 @@
 <html>
 
 <head>
-	 <div class="box-model">
-        This is a demo of box model, try to replicate this box model in html & css and pass all the test cases.
-    </div>
+	
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	 <div class="box-model">
+        This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases.
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
